# SNMP-Explorer

./: .gitignore  FortiGate_SNMP_Explorer.txt  LICENSE.md  README.md  fortigate_catalog_v4.json  pyproject.toml  requirements.txt
snmpexplorer/: app.py  profile_integration.py  secret_store.py  session_profile.py
snmpexplorer/assets/templates/: grafana.ini  node_exporter.service  prometheus.yml  snmp_exporter.service  snmp_minimal_snippet.yml
snmpexplorer/cache/: prometheus.yml  snmp.yml
snmpexplorer/common/: context.py  diff.py  notify.py  remote_install.py  service_status.py  sshio.py  yaml_rt.py
snmpexplorer/tabs/: catalog_tab.py  connection_tab.py  dashboard_tab.py  installation_tab.py  prom_tab.py  snmp_tab.py
snmpexplorer/tabs/dashboard/: __init__.py  builder.py  model.py  selection.py  tooltips.py  ui.py
